  * on the Enterprise and CPC, the external joysticks can now have a
    second and third fire button, configured as keys 0x75-0x76 (EXT1)
    and 0x7D-0x7E (EXT2)
  * more accurate emulation of NICK port reading and floating data bus
  * improved timing accuracy of NICK and DAVE port I/O (this may break
    compatibility with some demo files recorded with older versions)
  * new Lua functions: writeROM(), writeWordROM(), and loadROMSegment()
  * building with Lua 5.2 or 5.3 is now supported
  * added support for building 64-bit Windows binaries
  * epimgconv and other utilities are included with the emulator package
  * various minor bug fixes

Changes in version 2.0.9.1
--------------------------

  * some debugger changes related to ignore breakpoints
  * it is possible to delete single breakpoints in Lua scripts by using
    a negative priority value
  * minor 6845 CRTC emulation bug fix
  * fixed bugs in closing the debugger window with the Esc key

Changes in version 2.0.9
------------------------

  * implemented CPC floppy drive controller (uPD765) emulation:
    - it supports standard and extended .DSK image files, as well as
      using a real disk in the PC floppy drive (the latter is not very
      useful in practice, since it is limited to standard PC format DD
      (720K) disks, which are not supported by AMSDOS)
    - 4 drives can be emulated (although AMSDOS will only use 2)
    - there is (not perfect) emulation of the timing of disk rotation,
      stepping, head (un)load, and data transfers; however, this may
      not work if the image file includes a track format that is not
      possible on a real DD disk (~6250 bytes per track)
    - the FORMAT TRACK (0x0D) command is unimplemented - it will always
      report a write protect error
    - the floppy drive emulation has not been tested extensively yet,
      so there may be problems with unusual disk formats, rarely used
      FDC commands and parameters, and some copy protections