@@ -12,6 +12,8 @@ Changes in version 2.0.10
   * more accurate emulation of NICK port reading and floating data bus
   * improved timing accuracy of NICK and DAVE port I/O (this may break
     compatibility with some demo files recorded with older versions)
+  * implemented EXOS function 10 (set and read channel status) in the
+    FILE: device and epfileio.rom
   * new Lua functions: writeROM(), writeWordROM(), and loadROMSegment()
   * building with Lua 5.2 or 5.3 is now supported
   * added support for building 64-bit Windows binaries
